<resources>
    <string name="app_name">Thunder.GG</string>
    <string name="enter_summoner_name">Enter Summoner Name</string>
    <string name="summoner_name">Summoner Name</string>
    <string name="submit">Submit</string>
    <string name="lp_text_format">%d LP</string>
    <string name="kda_text_format">%d/%d/%d</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_summoner_text">Delete Summoner</string>
    <string name="no_summoner_text">No Summoner</string>
    <string name="delete_all_summoners_text">Delete All Summoners</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="make_account_text">Swipe up to make an Account!</string>
    <string name="swipe_down_login_text">Already Have an Account? Swipe Down To Login!</string>
    <string name="register_text">Register!</string>
    <string name="repeat_password_text">Repeat Password</string>
    <string name="summoner_name_text">Summoner Name</string>
    <string name="logout_text">Logout</string>
</resources>